MI SEGUNDO COMMIT

--- a/nosotros.html
+++ b/nosotros.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, distinctio culpa, recusandae
+         aliquid voluptatem ea aliquam ipsa odio voluptas sint non pariatur iste sequi dolorum nam laudantium,
+         fugiat quaerat. Perferendis.
+
+    </h1>
     
 </body>
 </html>
