Cambie nosotros y el index

--- a/nosotros.html
+++ b/nosotros.html
@@ -7,11 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, distinctio culpa, recusandae
+    <h1>LOREM IPSUM</h1>
+    <H2>2022</H2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, distinctio culpa, recusandae
          aliquid voluptatem ea aliquam ipsa odio voluptas sint non pariatur iste sequi dolorum nam laudantium,
          fugiat quaerat. Perferendis.
 
-    </h1>
+    </p>
     
 </body>
 </html>
